# my-life-in-data

./: CLAUDE.md  main.R  pyproject.toml
blog/: 1.md
book/data/: audit.csv
book/notes/: 1.md
education_and_employment/data/: modules.csv  stopwords.txt
education_and_employment/data/module_description/: 29.txt  30.txt  31.txt  32.txt
education_and_employment/src/: wc_pull.py  wc_visualise_helpers.py  wc_visualise_wordcloud.py
education_and_employment/src/.ipynb_checkpoints/: sandbox-checkpoint.ipynb
international/data/: countries.csv  living.csv
international/src/: mlid_int.R
podcast/data/: auditc.csv  podcast_directoryc.csv
podcast/notes/: 30.md  57.md  59.md  61.md  69.md  70.md
podcast/src/: try_again.py
sport/src/: mlid_sport.R
