[project]
name = "my-life-in-data"
version = "0.1.0"
description = "The story of my life expressed through data visualization."
authors = [{name = "Ben Barlow", email = "ben-j-barlow.1@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.1",
    "wordcloud>=1.9.2",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
